# CW_3

./: README.md  pyproject.toml
src/: converts_date.py  hide_the_account_or_card.py  main.py  open_file.py
test/: test_converts_date.py  test_hide_the_account_or_card.py
